<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微日记</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="tab_home">"日记墙"</string>
    <string name="tab_search">"日记本"</string>
    <string name="tab_settings">"设置"</string>
    
    <string name="title_home">"日记墙"</string>
    <string name="title_search">"日记本"</string>
    <string name="title_settings">"设置"</string>
    
    <string name="back">"返回"</string>
    <string name="help">"帮助"</string>
    <string name="exit">"退出"</string>

    <string name="fragment_home_text">"这是首页"</string>
    <string name="fragment_search_text">"这是搜索"</string>
    <string name="fragment_settings_text">"这是设置"</string>
    
    <string name="diary_iamge_description">iamge of diary book item</string>
    <string name="write_diary">写日记</string>
    <string name="diary_book">日记本</string>
    <string name="plan">备忘录</string>
    
<!--     	写日记的title -->
    <string name="title_write_diary_back">返回</string>
    <string name="title_write_diary_date">date</string>
    <string name="title_write_diary_add">完成</string>
    
    <string name="get_location">点击获取地理位置</string>
    
    <string name="settingregister_register">注册</string>
    <string name="settingregister_login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="email">邮箱</string>
    
	<string name="register_btn_cancle_text">取消</string>
	<string name="register_btn_ok_text">确定</string>
	
	<string name="update">同步日记</string>
    
</resources>