<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <com.eoe.tampletfragment.view.TitleView
      android:id="@+id/title_register"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
        
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        >
        <TextView 
            android:id="@+id/register_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:layout_marginLeft="10dip"
            />

        <EditText
            android:id="@+id/register_name_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="输入用户名"
            android:inputType="text" />

    </LinearLayout>

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        >
        <TextView 
            android:id="@+id/register_pssw_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="10dip"
            />

        <EditText
            android:id="@+id/register_pssw_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="输入密码"
            android:inputType="textPassword" />

    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        >
        <TextView 
            android:id="@+id/register_pssw_text2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/password2"
            android:layout_marginLeft="10dip"
            />

        <EditText
            android:id="@+id/register_pssw_edit2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="请再次输入密码"
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        >
        <TextView 
            android:id="@+id/register_email_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:layout_marginLeft="10dip"
            />

        <EditText
            android:id="@+id/register_email_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:hint="输入有效邮箱"
            android:inputType="textEmailAddress" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="30dip"
        >
        <Button 
            android:id="@+id/register_btn_cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_btn_cancle_text"
            android:layout_marginLeft="50dip"
            />
        <Button 
            android:id="@+id/register_btn_ok"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/register_btn_ok_text"
            android:layout_marginLeft="80dip"
            />
    </LinearLayout>
    
</LinearLayout>
