<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.eoe.tampletfragment.view.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout 
        android:id="@+id/linear_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip"
        >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_register_img"
        android:src="@drawable/register"
        android:layout_marginLeft="10dip"
        
        
        />
    <TextView
        android:id="@+id/setting_register_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingregister_register"
        android:layout_marginLeft="30dip"
        android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip"
        >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting_login_img"
        android:src="@drawable/login"
        android:layout_marginLeft="10dip"        
        />
    <TextView
        android:id="@+id/setting_login_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingregister_login"
        android:layout_marginLeft="30dip"
        android:textSize="30sp" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/setting_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/update"
        />
    
</LinearLayout>